--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.6.1",
+    "mongoose": "^7.6.2",
+    "mongoose-paginate-v2": "^1.7.4",
     "session-file-store": "^1.5.0"
   }
 }
